--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,30 @@
-.banner{
-    background:#ce8282;
-    width: 100vw;
-    height: 100vh;
+*{
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body{
+    background-color: grey;
+}
+.heading{
+    margin: 1rem 0rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #fff275;
+}
+.title{
+    color: #00401a;
+}
+.links{
+    text-decoration: none;
+    transition: 300ms;
 
-.logo{
-    border: 3px solid red;
+}
+.links:hover{
+    color: white;
+}
+.text{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+}
+.text-header{
+    font-family: cursive;
 }
