--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,56 @@
 *{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
-    background-color: grey;
+    background-color: #fff;
 }
+.banner{
+    width: 400px;
+    height: 700px;
+    margin: 0 auto;
+    background: #c6f8c6;
+}
+
+.banner-header{
+    letter-spacing: 3px;
+}
+
+.text-header{
+    font-family: Georgia, 'Times New Roman', Times, serif, Times, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: -0.3rem;
+    margin-bottom: 1rem;
+}
+
+.text-header, .banner-header{
+    text-align: center;
+    letter-spacing: 3px;
+}
+
+.hero{
+    padding: 10px;
+}
+
 .heading{
-    margin: 1rem 0rem;
+    margin: 0.5rem 0rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #fff275;
+    color: #fff;
 }
 .title{
-    color: #00401a;
+    color: #f5b45e;
+}
+.list{
+    list-style-type: none;
 }
 .links{
+    background: #f5b45e;
+    color: white;
     text-decoration: none;
-    transition: 300ms;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 10px;
 
 }
 .links:hover{
@@ -23,8 +58,5 @@ body{
 }
 .text{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: white;
-}
-.text-header{
-    font-family: cursive;
+    color: gray;
 }
