--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ body{
     border-radius: 8px;
 }
 .section{
-    width: 500px;
+    max-width: 500px;
     height: auto;
     margin: 0 auto;
     background: #c6f8c6;
